# Tcp-IP-Client-server-Tempsensor

./: Blockages_&_Solutions.txt  BuildCommands.txt  CMakeLists.txt  README.md
TSCS_Client/: CmakeLists.txt  main.cpp
TSCS_Client/include/: avg_clc.hpp  time_clc.hpp
TSCS_Client/src/: avg_clc.cpp  time_clc.cpp
TSCS_Network/: CMakeLists.txt
TSCS_Network/include/: Base.hpp
TSCS_Network/src/: Base.cpp
TSCS_Server/: CmakeLists.txt  main.cpp
